# snitch-frontend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  index.html  index.scss  nginx.conf  package-lock.json  package.json  tailwind.config.js
.github/workflows/: docker-publish.yml  rust.yml
src/: app.rs  lib.rs  tailwind.css
src/atomics/: test_input.rs
src/components/: login.rs  message.rs  message_list.rs  mod.rs  nav.rs  token_list.rs  user_details.rs
src/components/atomics/: text_input.rs
src/pages/: home.rs  login.rs  logout.rs  message_list.rs  messages.rs  mod.rs  register.rs  terms.rs  test.rs  token.rs
src/services/: backend.rs
src/stores/: user_store.rs
tests/: wasm.rs
