[package]
name = "function_router"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
lipsum = "0.8.2"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
yew = { version = "0.20.0", features = ["csr"]}
yew-router = { version = "0.17.0"}
serde = { version = "1.0" }
gloo = "0.8"
wasm-logger = "0.2"
wasm-bindgen = "0.2.83"
instant = { version = "0.1", features = ["wasm-bindgen"] }
once_cell = "1"
web-sys = {version="0.3.60", features = ["HtmlInputElement"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[[bin]]
name = "function_router"
required-features = ["yew/csr"]
