[package]
name = "function_router"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
lipsum = "0.9.1"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
yew = { version = "0.21.0", features = ["csr"]}
yew-router = { version = "0.18.0"}
serde = { version = "1.0" }
gloo = "0.11"
wasm-logger = "0.2"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
reqwasm = "0.5.0"
once_cell = "1"
web-sys = {version="0.3.60", features = ["HtmlInputElement", "RequestCredentials"]}
wasm-bindgen-test = "0.3.50"
serde_json = "1.0.91"
wasm-cookies = "0.2.0"
yewdux = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.2", features = ["wasm_js"] }

[[bin]]
name = "function_router"
required-features = ["yew/csr"]
